--- a/style.css
+++ b/style.css
@@ -23,8 +23,24 @@ h4 {
     margin-top: 0;
 }
 
+#description {
+    font-weight: 100;
+    text-align: center;
+    margin-top: 5;
+}
+
 #color {
     background-color: var(--main-bg-color);
+    width: 100px;
+    height: 100px;
+    margin-right: auto;
+    margin-left: auto;
+    border-radius: 50%;
+    /* border: 1px solid black; */
+    filter: drop-shadow(1px 1px 1px black);
+}
+
+#selected-color {
     width: 100px;
     height: 100px;
     margin-right: auto;
@@ -78,7 +94,7 @@ input[type="text"]::placeholder {
 #reset {
     display: flex;
     justify-content: center;
-    margin-top: 200px;
+    margin-top: 100px;
     height: 40px;
     border: none;
 }
@@ -118,4 +134,11 @@ input[type="text"]::placeholder {
     height: 50px;
     border: 1px solid #ccc; /* Optional: border for visibility */
     border-radius: 5px; /* Rounded corners for aesthetics */
+}
+
+#best {
+    margin-top: 0.5em;
+    margin-bottom: 1em;
+    display: flex;
+    justify-content: center;
 }
